tests/rosetta/out/C/arrays.c
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static list_int concat_list_int(list_int a, list_int b) {
  list_int r = list_int_create(a.len + b.len);
  for (int i = 0; i < a.len; i++)
    r.data[i] = a.data[i];
  for (int i = 0; i < b.len; i++)
    r.data[a.len + i] = b.data[i];
  return r;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
static list_int slice_list_int(list_int v, int start, int end) {
  if (start < 0)
    start += v.len;
  if (end < 0)
    end += v.len;
  if (start < 0)
    start = 0;
  if (end > v.len)
    end = v.len;
  if (start > end)
    start = end;
  list_int r = list_int_create(end - start);
  for (int i = 0; i < r.len; i++)
    r.data[i] = v.data[start + i];
  return r;
}
static int cap_s = 5;

const char *listStr(list_int xs) {
  const char *s = "[";
  int i = 0;
  while (i < xs.len) {
    char *tmp1 = _str(xs.data[i]);
    char *tmp2 = concat_string(s, tmp1);
    s = tmp2;
    if (i + 1 < xs.len) {
      char *tmp3 = concat_string(s, " ");
      s = tmp3;
    }
    i = i + 1;
  }
  char *tmp4 = concat_string(s, "]");
  s = tmp4;
  return s;
}

int main() {
  list_int a = list_int_create(5);
  a.data[0] = 0;
  a.data[1] = 0;
  a.data[2] = 0;
  a.data[3] = 0;
  a.data[4] = 0;
  char *tmp5 = _str(5);
  char *tmp6 = concat_string("len(a) = ", tmp5);
  printf("%s\n", tmp6);
  list_int tmp7 = list_int_create(5);
  tmp7.data[0] = 0;
  tmp7.data[1] = 0;
  tmp7.data[2] = 0;
  tmp7.data[3] = 0;
  tmp7.data[4] = 0;
  printf("%s\n", "a = " + listStr(tmp7));
  a[0] = 3;
  list_int tmp8 = list_int_create(5);
  tmp8.data[0] = 0;
  tmp8.data[1] = 0;
  tmp8.data[2] = 0;
  tmp8.data[3] = 0;
  tmp8.data[4] = 0;
  printf("%s\n", "a = " + listStr(tmp8));
  char *tmp9 = _str(a.data[0]);
  char *tmp10 = concat_string("a[0] = ", tmp9);
  printf("%s\n", tmp10);
  list_int tmp12 = {5, a};
  list_int tmp11 = slice_list_int(tmp12, 0, 4);
  list_int s = tmp11;
  printf("%s\n", "s = " + listStr(s));
  char *tmp13 = _str(s.len);
  char *tmp14 = concat_string("len(s) = ", tmp13);
  char *tmp15 = concat_string(tmp14, "  cap(s) = ");
  char *tmp16 = _str(cap_s);
  char *tmp17 = concat_string(tmp15, tmp16);
  printf("%s\n", tmp17);
  list_int tmp19 = {5, a};
  list_int tmp18 = slice_list_int(tmp19, 0, 5);
  s = tmp18;
  printf("%s\n", "s = " + listStr(s));
  a[0] = 22;
  s.data[0] = 22;
  list_int tmp20 = list_int_create(5);
  tmp20.data[0] = 0;
  tmp20.data[1] = 0;
  tmp20.data[2] = 0;
  tmp20.data[3] = 0;
  tmp20.data[4] = 0;
  printf("%s\n", "a = " + listStr(tmp20));
  printf("%s\n", "s = " + listStr(s));
  int tmp21_data[1];
  list_int tmp21 = {1, tmp21_data};
  tmp21.data[0] = 4;
  list_int tmp22 = concat_list_int(s, tmp21);
  s = tmp22;
  int tmp23_data[1];
  list_int tmp23 = {1, tmp23_data};
  tmp23.data[0] = 5;
  list_int tmp24 = concat_list_int(s, tmp23);
  s = tmp24;
  int tmp25_data[1];
  list_int tmp25 = {1, tmp25_data};
  tmp25.data[0] = 6;
  list_int tmp26 = concat_list_int(s, tmp25);
  s = tmp26;
  cap_s = 10;
  printf("%s\n", "s = " + listStr(s));
  char *tmp27 = _str(s.len);
  char *tmp28 = concat_string("len(s) = ", tmp27);
  char *tmp29 = concat_string(tmp28, "  cap(s) = ");
  char *tmp30 = _str(cap_s);
  char *tmp31 = concat_string(tmp29, tmp30);
  printf("%s\n", tmp31);
  a[4] = (-1);
  list_int tmp32 = list_int_create(5);
  tmp32.data[0] = 0;
  tmp32.data[1] = 0;
  tmp32.data[2] = 0;
  tmp32.data[3] = 0;
  tmp32.data[4] = 0;
  printf("%s\n", "a = " + listStr(tmp32));
  printf("%s\n", "s = " + listStr(s));
  list_int tmp33 = list_int_create(0);
  s = tmp33;
  for (int i = 0; i < 8; i++) {
    int tmp34_data[1];
    list_int tmp34 = {1, tmp34_data};
    tmp34.data[0] = 0;
    list_int tmp35 = concat_list_int(s, tmp34);
    s = tmp35;
  }
  cap_s = 8;
  printf("%s\n", "s = " + listStr(s));
  char *tmp36 = _str(s.len);
  char *tmp37 = concat_string("len(s) = ", tmp36);
  char *tmp38 = concat_string(tmp37, "  cap(s) = ");
  char *tmp39 = _str(cap_s);
  char *tmp40 = concat_string(tmp38, tmp39);
  printf("%s\n", tmp40);
  return 0;
}
